--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "cmdk": "^1.1.1",
     "convex": "^1.29.1",
     "date-fns": "^4.1.0",
+    "inngest": "^3.45.1",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
+    "react-spinners": "^0.17.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
