--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.66.0",
     "react-spinners": "^0.17.0",
     "recharts": "^3.4.1",
+    "resend": "^6.4.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
